# datatypes

./: .clang-format  .gitignore  CMakeLists.txt  README.rst  config.h.cmake
src/: CMakeLists.txt  datatypes.c
